...
            "state": "translated",
            "value": "Default translation language"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
...
            "state": "translated",
            "value": "Running…"
          }
        }
      }
    },
    "Runse": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Runse"
          }
...
            "state": "translated",
            "value": "Runse - Pinyin"
          }
        }
      }
    },
    "Runse - Refine Text": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Runse - Refine Text"
          }
        }
      }
    },
    "Runse - Translate Text": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Runse - Translate Text"
          }
...
            "state": "translated",
            "value": "Selected Text"
          }
        }
      }
    },
    "Services": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Services"
          }
...
